--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,10 @@
     <string name="height">Height</string>
     <string name="goal">Goal</string>
     <string name="done">Done</string>
+    <string name="home">Home</string>
+    <string name="diary">Diary</string>
+    <string name="progress">Progress</string>
+    <string name="more">more</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
